# pl-project2

./: LICENSE  Project2.py  README.md  omphelloc  test.py  test2.py
FreeImage/: Makefile.osx
MarrHildrethEdgeDet/: CMakeLists.txt  MarrHildrethEdgeDet.cpp
MarrHildrethEdgeDetOMP/: CMakeLists.txt  MarrHildrethEdgeDet.cpp
WienerFilter/: CMakeLists.txt  WienerFilter.cpp
WienerFilterOMP/: CMakeLists.txt  WienerFilter.cpp
